[package]
name = "domain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

# Deliberately dependency-light: this crate is the invariant core (money, order-status
# transitions, tenant identity, error taxonomy) and must stay pure — no IO, no sqlx, no tokio.
# `#[derive(sqlx::Type)]` on OrderStatus (per REBUILD-MAP inventory/12 §9) is NOT wired yet —
# see rebuild/README.md "Open questions" for why that's deferred to the contract lane.
# `utoipa` is the ONE exception to "no framework deps": it's a compile-time schema-derive macro
# crate (zero IO, zero runtime footprint) — needed because `ErrorEnvelope`/`ErrorCode` are the
# ADR-0010 shape EVERY S1 operation's error response references (REBUILD-MAP §1: "utoipa ->
# OpenAPI SSOT" is a cross-cutting decision, not api-crate-scoped); duplicating a second
# "documentation-only" mirror struct in `crates/api` would be the actual purity violation (two
# sources of truth for one wire shape).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = "5"

[dev-dependencies]
serde_json = "1"
